Fix card hover bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -69,11 +69,6 @@ button {
   transition: 0.3s ease;
 }
 
-.card:not(.deck):hover {
-  box-shadow: 0px 0px 10px 20px var(--primary-color);
-  cursor: pointer;
-}
-
 .key {
   width: var(--key-size);
   height: var(--key-size);
@@ -205,6 +200,13 @@ button {
     --logo-height: 66px;
 
     --view-padding-top: 1rem;
+  }
+}
+
+@media screen and (pointer: fine) {
+  .card:not(.deck):hover {
+    box-shadow: 0px 0px 10px 20px var(--primary-color);
+    cursor: pointer;
   }
 }
 
